<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/page_size_default"
        android:inputType="number"
        android:key="@string/page_size_key"
        android:selectAllOnFocus="true"
        android:title="@string/page_size_title" />
    <ListPreference
        android:defaultValue="@string/order_by_default"
        android:entries="@array/order_by_titles"
        android:entryValues="@array/order_by_values"
        android:key="@string/order_by_key"
        android:title="@string/order_by_title" />
    <ListPreference
        android:defaultValue="@string/use_date_default"
        android:entries="@array/use_date_titles"
        android:entryValues="@array/use_date_values"
        android:key="@string/use_date_key"
        android:title="@string/use_date_title" />
</PreferenceScreen>